assets/scss/rapidsai/_index.scss
/* ============================
   Custom CSS for rapids.ai
   Overrides for base Bulma.css
   =========================== */


/* /// general /// */
body {
  font-display: fallback;
  font-family: 'Open Sans', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: #fff;
  color: #212121;
  line-height: 1.6;
}

blockquote,
body,
dd,
dl,
dt,
fieldset,
figure,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
html,
iframe,
legend,
li,
ol,
p,
pre,
textarea,
ul {
  margin: 0;
  padding: 0;
}

img {
  max-width: 100%;
}

a {
  color: #37c9dd;
  cursor: pointer;
  font-weight: 700;
  transition: all 0.4s ease-out;
}

a:hover {
  color: #409da9;
  transition: all 0.4s ease-out;
}

.title:not(:last-child) {
  margin-bottom: 0.5rem;
}

h1,
h2,
h3 {
  color: #7306ff;
  font-weight: 300;
  letter-spacing: normal;
  font-family: sans-serif;
  text-transform: uppercase;
  margin-bottom: 0;
}

h1 {
  font-size: 2.5rem;
  line-height: 3rem;
}

h2 {
  font-size: 1.7rem;
  line-height: 2.5rem;
}

h3 {
  font-weight: bold;
}

h3, h4, h5, h6 {
  font-size: map-get($font-sizes, 6);
  line-height: 1.6;
}

.subheading {
  font-size: 1.3rem;
}

strong {
  color: inherit;
}

pre {
  position: relative;
  background-color: #efefef;
  padding: 1em;
  border-top: 2px solid #dedede;
  word-break: break-word;
  white-space: pre-wrap;
  margin-right: 1rem;
  overflow: visible;
  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2);
  color: #4a4a4a
}

code {
  color: #151515;
  background-color: #efefef;
}

a button {
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
  transition: all 0.4s ease-out;
}

a button:hover {
  text-shadow: none;
  transition: all 0.4s ease-out;
}

/* /// button style /// */
button {
  background-color: transparent;
  cursor: pointer;
  justify-content: center;
  padding-bottom: calc(0.5em - 1px);
  padding-left: 1em;
  padding-right: 1em;
  padding-top: calc(0.5em - 1px);
  text-align: center;
  white-space: nowrap;
  border-style: solid;
  border-color: #dbdbdb;
  color: white;
  border-width: 3px;
  border-radius: 0.5rem;
  border-top-right-radius: 0;
  font-weight: 600;
  font-family: 'Open Sans';
  text-transform: uppercase;
  transition: all 0.55s ease-out;
  line-height: 1.15;

  /* spent too much time on this */
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
  box-shadow:
    0 1px 2px rgba(0, 0, 0, 0.1),
    0 2px 2px rgba(0, 0, 0, 0.1),
    0 4px 2px rgba(0, 0, 0, 0.1),
    0 2px 2px rgba(0, 0, 0, 0.2) inset;
}

button:hover {
  text-shadow: none;
  box-shadow: none;
  transition: all 0.35s ease-out;
}

.button-rapids-white {
  color: white;
  border-color: white;
}

.button-rapids-purple {
  color: #7400ff;
  border-color: #7400ff;
}

.button-rapids-teal {
  color: #1ebdd2;
  border-color: #1ebdd2;
}

/* Note: copy-button class applied by js */
.copy-button {
  position: absolute;
  top: -2rem;
  right: 0;
  border-radius: 0;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  border-width: 2px;
  border-bottom-width: 0;
  color: #720dff;
  border-color: #720dff;
  box-shadow: 0px 3px 2px rgba(0,0,0, 0.3) inset;
}

/* Note: copy-button-white class applied by js if 'use-white-copy' class present */
.copy-button-white {
  position: absolute;
  top: -2rem;
  right: 0;
  border-radius: 0;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  border-width: 2px;
  border-bottom-width: 0;
  color: white;
  border-color: white;
  box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.3) inset;
  line-height: map-get($additional-line-heights, "xs");
}

/* /// footer /// */
.footer {
  padding-top: 1rem;
  padding-bottom: 5rem;
}

.footer-logo {
  margin: 0 auto;
  width: 150px;
}

.footer-item {
  color: rgba(255, 255, 255, 0.85);
  padding-left: 0.1rem;
  padding-right: 0.1rem;
}


/* /// hero /// */
.hero-rapids-bg {
  background: url(../images/header-bg.svg) top center no-repeat;
  background-size: cover;
  min-height: 300px;
}

.hero-img {
  width: 225px;
  margin: 0 auto;
}

.hero-body {
  padding: 7rem 1.5rem;

  @include media-breakpoint-up(md) {
    padding: 9rem 4.5rem;
  }
}

.hero-announce-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.hero-announce {
  position: relative;
  font-size: 0.85rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  margin-top: 1rem;
}

.announce-icon {
  position: absolute !important; // override .fa-stack position
  font-size: 0.75rem;
  top: -0.75rem;
  left: -0.3rem;
  color: #7400ff;
}

/* /// slant graphics /// */
/* https://css-tricks.com/using-box-shadows-and-clip-path-together/ */
.top-slant-container {
  filter: drop-shadow(0px -3px 2px rgba(0, 0, 0, 0.2));
  margin: 0 calc(-#{$grid-gutter-width} / 2);
}

.top-slant-up {
  height: 4.1rem;
  margin-top: -4rem;
  margin-bottom: -0.1rem;
  clip-path: polygon(0 100%, 0 80%, 100% 0, 100% 100%);
}

.top-slant-down {
  height: 4.1rem;
  margin-top: -4rem;
  margin-bottom: -0.1rem;
  clip-path: polygon(0 100%, 100% 100%, 100% 80%, 0 0);
}

.bottom-slant-container {
  filter: drop-shadow(0px 3px 2px rgba(0, 0, 0, 0.2));
  margin: 0 calc(-#{$grid-gutter-width} / 2);
}

.bottom-slant-up {
  height: 4.1rem;
  margin-bottom: -4rem;
  margin-top: -0.1rem;
  clip-path: polygon(0 0, 100% 0, 100% 20%, 0% 100%);
}

.bottom-slant-down {
  height: 4.1rem;
  margin-bottom: -4rem;
  margin-top: -0.1rem;
  clip-path: polygon(0 0, 0 20%, 100% 100%, 100% 0);
}

.padding-bottom-slant {
  padding-bottom: 10.5rem!important;
}

.padding-top-slant {
  padding-top: 10.5rem!important;
}


/* /// misc /// */

.tags-container {
  width: 100%;
  margin-top: -0.2rem;
  margin-bottom: 0.5rem;
  display: flex;
  justify-content: right;
}

.tags-item {
  font-size: 0.7rem;
  font-weight: 600;
  border-width: 0.13rem;
  border-bottom-right-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
  border-left-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  text-align: center;
  padding-top: 0.15rem;
  padding-bottom: 0.15rem;
  padding-left: 0.45rem;
  padding-right: 0.45rem;
  margin-left: 0.4rem;
  margin-top: -0.1rem;
}

/* /// border colors /// */
.has-border-rapids-purple-primary {
  border-color:#720dff!important;
}

.has-border-rapids-pink {
  border-color: #d216d2;
}

.has-border-rapids-orange {
  border-color: #ffb500;
}

.has-border-rapids-teal {
  border-color: #36c9dd;
}

.border-white {
  border-color: rgb(228, 228, 228)!important;
}


/* /// posts /// */
.post-text {
  color: #666666;
  font-weight: 400;
  line-height: 1.4rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

.post-action {
  color: #7306ff;
  font-size: 1.2rem;
  margin-top: 0.5rem;
  font-variant: all-small-caps;
}


/* /// images /// */
.img-center {
  margin: 0 auto;
}

.img-full {
  width: 100%;
}

.img-half {
  width: 50%;
}

.img-third {
  width: 33%;
}

.img-quarter {
  width: 25%;
}

.img-w100 {
  width: 100px;
}

.img-w150 {
  width: 150px;
}

.img-w200 {
  width: 200px;
}

.img-w250 {
  width: 250px;
}

.img-w400 {
  width: 400px;
}

/* /// extra spacers /// */
.section {
  padding: map-get($spacers, 5) 0;

  @include media-breakpoint-up(md) {
    padding: map-get($spacers, 7) 0;
  }
}

/* /// colors /// */
.has-background-rapids-gray {
  background-color: #f8f8f8;
}

.has-background-rapids-purple-primary {
  background-color: #7400ff;
}

.has-background-rapids-purple-secondary1 {
  background-color: #8735fb;
}

.has-background-rapids-purple-secondary2 {
  background-color: #984dfb;
}

.has-background-rapids-pink {
  background-color: #d216d2;
}

.has-background-rapids-orange {
  background-color: #ffb500;
}

.has-background-rapids-teal {
  background-color: #36c9dd;
}

.has-text-rapids-purple-primary {
  color: #7400ff;
}

.has-text-rapids-purple-secondary1 {
  color: #8735fb;
}

.has-text-rapids-purple-secondary2 {
  color: #984dfb;
}

.has-text-rapids-pink {
  color: #d216d2;
}

.has-text-rapids-orange {
  color: #ffb500;
}

.has-text-rapids-teal {
  color: #36c9dd;
}

